Navigate back using PopAsync

--- a/inkedup-maui/PensPage.xaml
+++ b/inkedup-maui/PensPage.xaml
@@ -7,5 +7,6 @@
         <Label Text="These are your pens!"
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="CenterAndExpand" />
+        <Button Text="Navigate Back" x:Name="BtnNavigateBack" Clicked="BtnNavigateBack_Clicked"/>
     </StackLayout>
 </ContentPage>
