--- a/inkedup-maui/PensPage.xaml
+++ b/inkedup-maui/PensPage.xaml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            x:Class="inkedup_maui.PensPage"
-            BackgroundColor="White">
-    <StackLayout>
-        <Label Text="These are your pens!"
-                VerticalOptions="CenterAndExpand"
-                HorizontalOptions="CenterAndExpand" />
-        <Button Text="Navigate Back" x:Name="BtnNavigateBack" Clicked="BtnNavigateBack_Clicked"/>
-    </StackLayout>
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="inkedup_maui.PensPage"
+             BackgroundColor="White"
+             NavigationPage.HasNavigationBar="False">
+
+    <Grid RowDefinitions="Auto,Auto,*">
+        <Label Grid.Row="0" Text="News 24" FontSize="Title" VerticalOptions="Center" HorizontalOptions="Center"/>
+        <CollectionView Grid.Row="1" x:Name="CvBrands" HeightRequest="60" SelectionMode="Single" SelectionChanged="CvBrands_SelectionChanged">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Horizontal" ItemSpacing="5"/>
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Padding="10">
+                        <Label FontSize="Medium" Text="{Binding BrandName}" />
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <CollectionView Grid.Row="2" x:Name="CvPens" SelectionMode="Single" SelectionChanged="CvPens_SelectionChanged">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" ItemSpacing="15"/>
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Padding="10">
+                        <Image HeightRequest="200" Source="{Binding Image}" Aspect="Fill"/>
+                        <Label FontSize="Medium" Text="{Binding Model}"/>
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
