--- a/inkedup-maui/PensPage.xaml
+++ b/inkedup-maui/PensPage.xaml
@@ -6,7 +6,7 @@
              NavigationPage.HasNavigationBar="False">
 
     <Grid RowDefinitions="Auto,Auto,*">
-        <Label Grid.Row="0" Text="News 24" FontSize="Title" VerticalOptions="Center" HorizontalOptions="Center"/>
+        <Label Grid.Row="0" Text="Inked Up - Pens" FontSize="Title" VerticalOptions="Center" HorizontalOptions="Center"/>
         <CollectionView Grid.Row="1" x:Name="CvBrands" HeightRequest="60" SelectionMode="Single" SelectionChanged="CvBrands_SelectionChanged">
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout Orientation="Horizontal" ItemSpacing="5"/>
